Fix team member resizing on smaller screens

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,10 +6,6 @@
     margin: 0 0 0.5em 0 !important;
 }
 
-.row > .team-member {
-    width: 20%;
-}
-
 .help-block.error {
     margin-bottom: 0px;
     color: red;
